test/cases/pos/0048c_callst.ul
fn ignore int n => return;

ignore 3;
