test/cases/neg/0200b_redecl.ul
int i;

fn func => {
  int i = 3;
  return;
}
